OC-3653:    Fill Header data for PrintCRF;     and     OC-3408 Print Event CRF Grid Formatting -- issue OC-3834 Group Header not showing up

--- a/web/src/main/webapp/css/app.css
+++ b/web/src/main/webapp/css/app.css
@@ -39,7 +39,7 @@ h4 {
 
 .right-header{
   display: inline-block;
-  width: 300px; 
+  width: 500px; 
   vertical-align: top;
 }
 
@@ -78,7 +78,14 @@ a:link {
   text-align: left; 
 }
 
-
+.text-left-aligned-bold {
+  text-align: left; 
+  font-weight:bold;
+}
+.text-right-aligned-bold {
+  text-align: right; 
+  font-weight:bold;
+}
 .repeating_item_wrapper{
   display:inline-block;
   margin-top:0px;
